--- a/stores/templates/stores/product_smartphone_list.html
+++ b/stores/templates/stores/product_smartphone_list.html
@@ -29,31 +29,31 @@
                     <div class="card-sub-title">
                         <h3 style="padding-top: 5px; margin-left: 26px;">Product Spesifications:</h3>
                     </div>
-                    <div class="spesification-pos" style="display: flex;">
+                    <div class="spesification-pos" style="display: flex; margin-left: 20px;">
                         <h6 style="margin-right: 5px;">Category:</h6> <p style="margin-top: -1px;">{{ list_product_smartphone.categories }}</p>
                     </div>
-                    <div class="spesification-pos" style="display: flex;">
+                    <div class="spesification-pos" style="display: flex; margin-left: 20px;">
                         <h6 style="margin-right: 5px;">Brand:</h6> <p style="margin-top: -1px;">{{ list_product_smartphone.brand }}</p>
                     </div>
-                    <div class="spesification-pos" style="display: flex;">
+                    <div class="spesification-pos" style="display: flex; margin-left: 20px;">
                         <h6 style="margin-right: 5px;">Memory:</h6> <p style="margin-top: -1px;">{{ list_product_smartphone.memory_capacity }}</p>
                     </div>
-                    <div class="spesification-pos" style="display: flex;">
+                    <div class="spesification-pos" style="display: flex; margin-left: 20px;">
                         <h6 style="margin-right: 5px;">Ram:</h6> <p>{{ list_product_smartphone.ram_capacity }}</p>
                     </div>
-                    <div class="spesification-pos" style="display: flex;">
+                    <div class="spesification-pos" style="display: flex; margin-left: 20px;">
                         <h6 style="margin-right: 5px;">Stock:</h6> <p style="margin-top: -1px;">{{ list_product_smartphone.stock }}</p>
                     </div>
-                    <div class="spesification-pos" style="display: flex;">
+                    <div class="spesification-pos" style="display: flex; margin-left: 20px;">
                         <h6 style="margin-right: 5px;">Garansi:</h6> <p style="margin-top: -1px;">{{ list_product_smartphone.warranty_period }}</p>
                     </div>
-                    <div class="spesification-pos" style="display: flex;">
+                    <div class="spesification-pos" style="display: flex; margin-left: 20px;">
                         <h6 style="margin-right: 5px;">Condition:</h6> <p style="margin-top: -1px;">{{ list_product_smartphone.condition }}</p>
                     </div>
                     <div class="card-sub-title">
                         <h3 style="padding-top: 5px; margin-left: 26px;">Product Description:</h3>
                     </div>
-                    <p>{{ list_product_smartphone.description }}</p>
+                    <p style="margin-left: 20px; white-space: pre-wrap;">{{ list_product_smartphone.description }}</p>
                 </div><br>
                 <div class="card">
                     <div class="card-sub-title">
