--- a/stores/templates/stores/product_food_list.html
+++ b/stores/templates/stores/product_food_list.html
@@ -29,31 +29,31 @@
                     <div class="card-sub-title">
                         <h3 style="padding-top: 5px; margin-left: 26px;">Product Spesifications:</h3>
                     </div>
-                    <div class="spesification-pos" style="display: flex;">
+                    <div class="spesification-pos" style="display: flex; margin-left: 20px;">
                         <h6 style="margin-right: 5px;">Category:</h6> <p style="margin-top: -1px;">{{ list_product_food.food_categories }}</p>
                     </div>
-                    <div class="spesification-pos" style="display: flex;">
+                    <div class="spesification-pos" style="display: flex; margin-left: 20px;">
                         <h6 style="margin-right: 5px;">Masa Penyimpanan:</h6> <p style="margin-top: -1px;">{{ list_product_food.storage_period }}</p>
                     </div>
-                    <div class="spesification-pos" style="display: flex;">
+                    <div class="spesification-pos" style="display: flex; margin-left: 20px;">
                         <h6 style="margin-right: 5px;">Kondisi Penyimpanan:</h6> <p style="margin-top: -1px;">{{ list_product_food.storage_condition }}</p>
                     </div>
-                    <div class="spesification-pos" style="display: flex;">
+                    <div class="spesification-pos" style="display: flex; margin-left: 20px;">
                         <h6 style="margin-right: 5px;">Berat Produk:</h6> <p>{{ list_product_food.product_weight }}</p>
                     </div>
-                    <div class="spesification-pos" style="display: flex;">
+                    <div class="spesification-pos" style="display: flex; margin-left: 20px;">
                         <h6 style="margin-right: 5px;">Jumlah Produk:</h6> <p style="margin-top: -1px;">{{ list_product_food.number_product }}</p>
                     </div>
-                    <div class="spesification-pos" style="display: flex;">
+                    <div class="spesification-pos" style="display: flex; margin-left: 20px;">
                         <h6 style="margin-right: 5px;">Stock:</h6> <p style="margin-top: -1px;">{{ list_product_food.food_stock }}</p>
                     </div>
-                    <div class="spesification-pos" style="display: flex;">
+                    <div class="spesification-pos" style="display: flex; margin-left: 20px;">
                         <h6 style="margin-right: 5px;">Dikirim dari:</h6> <p style="margin-top: -1px;">{{ list_product_food.food_seller_Address }}</p>
                     </div>
                     <div class="card-sub-title">
                         <h3 style="padding-top: 5px; margin-left: 26px;">Product Description:</h3>
                     </div>
-                    <p>{{ list_product_food.food_description }}</p>
+                    <p style="margin-left: 20px; white-space: pre-wrap;">{{ list_product_food.food_description }}</p>
                 </div><br>
                 <div class="card">
                     <div class="card-sub-title">
