--- a/stores/templates/stores/product_smartphone_list.html
+++ b/stores/templates/stores/product_smartphone_list.html
@@ -59,6 +59,42 @@
                     <div class="card-sub-title">
                         <h3 style="padding-top: 5px; margin-left: 26px;">Review Product:</h3>
                     </div>
+                    <div class="review-style" style="margin-left: 20px;">
+                        <div>
+                            {% for comment in review_smartphone %}
+                                <p>{{ comment.text }}</p>
+                                <img src="{{ comment.pictures.url }}" style="width: 90px; height: 90px;">
+                                {% for picture in comment.pictures.all %}
+                                    <img src="{{ picture.url }}" alt="Comment-Picture">
+                                {% endfor %}
+                                <p>Posted by {{ comment.user.first_name }} {{ comment.user.last_name }} on {{ comment.created_at }}</p>
+                            {% empty %}
+                                <h5>No comments yet</h5>
+                            {% endfor %}
+                        </div><br><br><br>
+                        <div>
+                            <h4>Add a comment:</h4>
+                            <form method="POST" enctype="multipart/form-data" style="width: 800px;">
+                                {% csrf_token %}
+
+                                <div class="user-review" style="width: 590px; display: flex; margin-bottom: 10px;">
+                                    <p style="margin-right: 50px;">User:</p>{{ commment_smartphone_form.user }}
+                                </div>
+                                <div class="smartphone-review" style="width: 590px; display: flex; margin-bottom: 10px;">
+                                    <p style="margin-right: 26px;">Product:</p>{{ commment_smartphone_form.smartphone }}
+                                </div>
+                                <div class="text-review" style="width: 590px; height: 130px; display: flex; margin-bottom: 40px;">
+                                    <p style="margin-right: 34px;">Review:</p>{{ commment_smartphone_form.text }}
+                                </div>
+                                <div class="pictures-review" style="display: block;">
+                                    {{ commment_smartphone_form.pictures }}
+                                </div>
+
+                                <br><br>
+                                <input type="Submit" value="Add" class="btn btn-primary"></input>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
