--- a/stores/templates/stores/product_smartphone_list.html
+++ b/stores/templates/stores/product_smartphone_list.html
@@ -14,9 +14,16 @@
                             <br><br>
                         
                             <div class="owner-shop" style="display: flex; align-items: flex-start;">
-                                <img src="{{ list_product_smartphone.owner.image.url }}" style="width: 100px; height: 100px; border-radius: 50%;">
-                                <h5>{{ list_product_smartphone.owner }}</h5>
-                            </div><br><br><br><br>
+                                <img src="{{ list_product_smartphone.owner.image.url }}" style="width: 100px; height: 100px; border-radius: 50%; margin-right: 10px;">
+                                <div>
+                                    <h5>{{ list_product_smartphone.owner }}</h5>
+                                    <div class="visit-store">
+                                        <a href="{% url 'seller_store' list_product_smartphone.owner.store_name %}" class="btn" style="color: white; width: 180px; height: 40px; border-radius: 20px; background-color: rgb(112,52,87); text-decoration: none;">Visit Store</a>
+                                    </div>
+                                </div>
+                            </div><br>
+
+                            <br><br><br>
                             
                             
                         </div>
@@ -67,6 +74,7 @@
                                     <div>
                                         <h6>{{ comment.user.first_name }} {{ comment.user.last_name }}</h6>
                                         <p style="margin-top: -8px; margin-bottom: 20px;">{{ comment.created_at }}</p>
+                                        <p style="white-space: pre-wrap; margin-bottom: 15px;">{{ comment.smartphone }}</p>
                                         <p style="white-space: pre-wrap; margin-bottom: 5px;">{{ comment.text }}</p>
                                         <img src="{{ comment.pictures.url }}" style="width: 70px; height: 70px;">
                                     </div>
@@ -79,10 +87,14 @@
                             {% empty %}
                                 <h5>No comments yet</h5>
                             {% endfor %}
-                        </div><br><br><br>
-                        <div>
+                        </div><br><br>
+                        <div class="add-review">
+                            <input type="button" id="add-review-button" style="color: white; width: 100px; height: 40px; border-radius: 10%; background-color: rgb(112,52,87);" value="Add Review">
+                        </div>
+                        <br>
+                        <div id="comment-form-container" style="display: none;">
                             <h4>Add a comment:</h4>
-                            <form method="POST" enctype="multipart/form-data" style="width: 800px;">
+                            <form id="comment-form" method="POST" enctype="multipart/form-data" style="width: 800px;">
                                 {% csrf_token %}
 
                                 <div class="user-review" style="width: 590px; display: flex; margin-bottom: 10px;">
@@ -94,14 +106,15 @@
                                 <div class="text-review" style="width: 590px; height: 130px; display: flex; margin-bottom: 40px;">
                                     <p style="margin-right: 34px;">Review:</p>{{ comment_smartphone_form.text }}
                                 </div>
-                                <!-- <div class="pictures-review" style="display: block;">
-                                    hoek: {{ comment_smartphone_form.pictures }}
-                                </div> -->
-                                {% for picture in picture_formset %}
+                                <div class="pictures-review" style="display: block; display: flex; margin-bottom: 5px;">
+                                    <p style="margin-right: 34px;">Add Picture:</p> {{ comment_smartphone_form.pictures }}
+                                </div>
+
+                                <!-- {% for picture in picture_formset %}
                                     <div class="pictures-review" style="display: block;">
                                         {{ picture.pictures }}
                                     </div>
-                                {% endfor %}
+                                {% endfor %} -->
 
                                 <!-- <div class="pictures-review" style="display: block;">
                                     {{ picture_formset.pictures }}
@@ -162,5 +175,13 @@
                 align-items: flex-start;
             }
         </style>
+
+
+        <script>
+            document.getElementById('add-review-button').addEventListener('click', function() {
+                document.getElementById('add-review-button').style.display = 'none'
+                document.getElementById('comment-form-container').style.display = 'block'
+            })
+        </script>
     </body>
 {% endblock %}
