--- a/stores/templates/stores/product_smartphone_list.html
+++ b/stores/templates/stores/product_smartphone_list.html
@@ -19,6 +19,7 @@
                                     <h5>{{ list_product_smartphone.owner }}</h5>
                                     <div class="visit-store">
                                         <a href="{% url 'seller_store' list_product_smartphone.owner.store_name %}" class="btn" style="color: white; width: 180px; height: 40px; border-radius: 20px; background-color: rgb(112,52,87); text-decoration: none;">Visit Store</a>
+                                        Add to chart
                                     </div>
                                 </div>
                             </div><br>
