Feat: add 'Shopping_Cart' class models, add urls, views, and page to show the data in cart.

--- a/stores/templates/stores/navbarStyle.html
+++ b/stores/templates/stores/navbarStyle.html
@@ -28,7 +28,7 @@
                     <button class="btn btn-success" type="submit">Search</button>
                 </form>
                 <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true" style="color: white;">Disabled</a>
+                    <a class="nav-link" href="{% url 'cart_shop' %}" style="color: white;">Keranjang</a>
                 </li>
             </ul>
             <div class="nav-item">
