--- a/stores/templates/stores/product_smartphone_list.html
+++ b/stores/templates/stores/product_smartphone_list.html
@@ -20,6 +20,10 @@
                                     <div class="visit-store">
                                         <a href="{% url 'seller_store' list_product_smartphone.owner.store_name %}" class="btn" style="color: white; width: 180px; height: 40px; border-radius: 20px; background-color: rgb(112,52,87); text-decoration: none;">Visit Store</a>
                                         Add to chart
+                                        <form method="post" action="{% url 'smartphone_show' smartphone_id=list_product_smartphone.pk %}">
+                                            {% csrf_token %}
+                                            <button type="submit" name="add_to_cart" class="btn btn-success">Add to Cart</button>
+                                        </form>
                                     </div>
                                 </div>
                             </div><br>
